# imc-prosperity-4

./: .env  .gitignore  .gitmodules  README.md  datamodel.py  example.py  historical_view.py  main.py  manual.ipynb  products.py  pyproject.toml  simulation_view.py  trader.py
analysis/: prices.py
assets/: style.css
dashboard/: log_formatter.py  prices.py  trades.py
dashboard/historical/: callbacks.py  layout.py  orderbook.py
dashboard/shared/: callbacks.py  components.py  orderbook.py
dashboard/simulation/: callbacks.py  layout.py  metrics.py  orderbook.py
dashboard/strategy/: callbacks.py  orderbook.py
loaders/: csv_loader.py  log_loader.py
